Add mutex support to the pps_ioctl() API in the kernel. Bump kernel version to reflect structure change.

PR:		196897
MFC after:	1 week